<?xml version="1.0" encoding="utf-8"?>
<!--Inspired from https://github.com/farida-techie/LoginPageUi-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragment"
            type="org.lniranjan.chatclone.ui.fragment.LoginFragment" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.fragment.LoginFragment">

    <TextView
        android:text="Chat App"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:foregroundGravity="center_horizontal"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/logIn"
                    android:text="@string/log_in"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textStyle="bold|normal"
                    android:background="@drawable/switch_trcks"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)-> fragment.enableLogin()}"
                    />
                <TextView
                    android:id="@+id/signUp"
                    android:text="@string/signUp"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/pinkColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textStyle="bold|normal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)-> fragment.enableSignUp()}"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/logInLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"> 
                 <com.google.android.material.textfield.TextInputLayout  
                    android:hint="Email"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:id="@+id/eMail"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="Password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwords"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:textSize="11sp"
                    android:text="Forget Password?"
                    android:textAlignment="textEnd"
                    android:textColor="#616161"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/signUpLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout 
                    android:hint="Email"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:id="@+id/eMails"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="Password"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwordss"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="Confirm Password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwords01"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <Button
                android:id="@+id/submit"
                android:text="@string/submit"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/textColor"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/Button5"
                app:backgroundTint="@color/pinkColor"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> fragment.submit()}"/>
 

            <TextView
                android:text="OR"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#474646"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/facebookLogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:onClick="@{(v)-> fragment.showNotImplementedMessage()}"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/googleLogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:onClick="@{(v)-> fragment.showNotImplementedMessage()}"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:id="@+id/twitterLogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:onClick="@{(v)-> fragment.showNotImplementedMessage()}"
                    android:src="@drawable/ic_twitter" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>