...
        android:id="@+id/messagingFragment"
        android:name="org.lniranjan.chatclone.ui.fragment.MessagingFragment"
        android:label="fragment_messaging"
        tools:layout="@layout/fragment_messaging" >
        <action
            android:id="@+id/action_messagingFragment_to_chatListFragment"
            app:destination="@id/chatListFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="org.lniranjan.chatclone.ui.fragment.BioFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" >
...
